# Jardias

./: .env.example  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_en.md  SECURITY.md  TRADEMARK.md  app.py  pyproject.toml  pytest.ini  requirements.txt  手动保存的终端输出.txt  项目介绍.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  feature_request.md
actor_config/: __init__.py  config_io.py  model_resolver.py  provider_manager.py  providers.json5
agent_config/: __init__.py  config_io.py
character/: __init__.py  character_menu.py  config_io.py  experience.py  history.py  registry.py  summarizer.py
character_data/202605282323-测试员1/: config.json  context_latest.md  history.json
character_data/202605282323-配置审计员/: config.json  context_latest.md  history.json
character_data/202605301419-无名/: config.json  context_latest.md  history.json
character_data/202606102208-刘洋/: config.json  context_latest.md  history.json
character_data/202607061624-测试员-水果/: config.json  context_latest.md  history.json
character_data/202607061639-测试员-动物/: config.json  context_latest.md  history.json
character_data/202607062240-测试员-糖果/: config.json  context_latest.md  history.json
character_data/202607062308-测试员-植物/: config.json  context_latest.md  history.json
character_data/202607062345-测试员-地名/: config.json  context_latest.md  history.json
character_data/202607070007-测试员-科学家/: config.json  context_latest.md  history.json
character_data/202607070018-测试员1/: _dump_meta.json  config.json  context_latest.md  experience.md  history.json
character_data/202607070018-配置审查员/: config.json  context_latest.md  history.json
character_data/202607070926-小明/: config.json  context_latest.md  history.json
character_data/202607070926-思辨者-价值/: config.json  context_latest.md  history.json
character_data/202607071236-测试员2/: config.json  context_latest.md  history.json
character_data/202607111719-测试员2/: _dump_meta.json  config.json  experience.md  history.json
character_data/202607111719-范式革命工程师/: config.json  experience.md  history.json
character_data/202607112002-佳递叶思/: _dump_meta.json  config.json  experience.md  history.json
character_data/202607112008-思辨者/: config.json  experience.md  history.json
character_data/202607112015-角色3/: _dump_meta.json  config.json  experience.md  history.json
character_data/202607112016-角色3-野马/: config.json  experience.md  history.json
character_data/202607121758-佳递叶思2/: _dump_meta.json  config.json  experience.md  history.json
character_data/202607121758-佳递叶思2-1/: _dump_meta.json  config.json  experience.md  history.json
character_data/202607121805-求真者/: config.json  experience.md  history.json
character_data/202607121812-配置探索者/: _dump_meta.json  config.json  experience.md  history.json
common/: __init__.py  actor_log.py  agent_log.py  bootstrap.py  cli_output.py  cli_style.py  context.py  experience_core.py  i18n.py  lifecycle.py  logger.py  utils.py
data_shape/: __init__.py  agent_config.py  character.py  ipu.py  ipu_client.py  model_client.py  tool.py  update_args.py  yinao.py  yinao_config.py
doc/: 与角色对话操作方法.md  代码优化优先级清单.md  代码风格规范.md  优化建议.md  开源后续待办.md  收尾工作.md  测试经验教训.md  经验模块重构说明.md
doc/上下文控制推演/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
experience/: __init__.py  formatter.py  icp_cost.py  practice.py  reader.py  writer.py
experience/adapter/: README.md  __init__.py  archive_recall.py  conversation.py  init.py  state.py
experience/io/: __init__.py  reader.py  writer.py
jardias/: __init__.py  __main__.py
media/: __init__.py  image.py
meta/: CHANGELOG  CLA-CORPORATE  CLA-INDIVIDUAL  CONTRIBUTING  LICENSE-CODE  LICENSE-PAPERS  NOTICE  README.md  TRADEMARK
model_client/: __init__.py  circuit_breaker.py  common_client_util.py  dashscope.py  deepseek.py  minimax.py  model_context.py  switch.py
playbook/: __init__.py
schedule/: __init__.py  concurrency.py  repository.py  shice.py  strategies.py  types.py
tests/: README.md  _probe_send_to_character_reachability.py  _run_tests.ps1  conftest.py  create_char.txt  create_endtest.txt  create_test_char.txt  pytest.ini  round1.txt  round2.txt  round2_endtest.txt  round3.txt  round3_archive.txt  round3b.txt  round4.txt  round4_verify.txt  round6.txt  round7.txt  round8.txt  round9.txt  run.bat  series2_step1_output.txt  series_1.txt  series_1_output.txt  series_2.txt  series_2b.txt  series_2c.txt  series_3.txt  series_4.txt  series_5.txt  series_6.txt  series_7.txt  series_8.txt  series_step4_2.txt  series_step4_2_out.txt  series_step4_2_output.txt  series_step4_output.txt  series_step5.txt  series_step5_output.txt  series_step6_output.txt  (+83 more)
tool/: __init__.py  actor_tool.py  builtin.py  descriptions.py  llm_tool.py  metadata.py
tool/builtin_tools/: __init__.py  characters.py  config.py  context.py  experience.py  files.py  shice.py  web.py
tools/: check_block_size.py  show_block_diff.py  snapshot_experience.py
yinao/: __init__.py  ipu_resolver.py  provider_manager.py  providers.json
yinao/ipu_client/: __init__.py  _client.py  _providers.py  _stream_chat.py  chunk_normalizer.py  circuit_breaker.py  common_client_util.py  dashscope.py  deepseek.py  icp_tracker.py  ipu_context.py  ipu_switch.py  minimax.py  switch.py  thought_weaver.py
yinao/launcher/: __init__.py  config_resolver.py  ipu_config_manager.py  ipu_switch.py  reply_getter.py
yinao/weaver/: __init__.py  chunk_normalizer.py  circuit_breaker.py  icp_tracker.py  ipu_context.py  round_state.py  thought_weaver.py  tool_runner.py
(+13 files in other folders)
